spec/error_toplevel_implicit_this.expected
spec/error_toplevel_implicit_this.kex:4:1: error: ':>' (implicit-This signature) is only valid inside 'make T do ... end' — use ':' at top level instead
Aborted: fix syntax errors before running.
